--- a/css/main.css
+++ b/css/main.css
@@ -5,9 +5,20 @@ body {
   background-image: url(/assets/img/game_bg.png);
   background-size: cover;
   background-repeat: no-repeat;
-  background-size: 100% 300px;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: 14px;
+}
+
+h2 {
+  font-weight: 700;
+  margin: 0;
+  font-size: 23px;
+  line-height: 28px;
+  padding-top: 15px;
+}
+
+.f-bold {
+  font-weight: 700;
 }
 
 .content__block {
@@ -62,6 +73,24 @@ body {
   padding: 0;
 }
 
+.header-title {
+  padding: 30px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header-title h1 {
+  width: 80%;
+  margin: 0;
+  font-weight: 700;
+  font-size: 27px;
+  line-height: 32px;
+}
+
 .game__background {
   background: url(/assets/img/battleship.png), #fff;
   height: 100vw;
@@ -80,10 +109,13 @@ body {
   background-color: #fff;
   width: 100%;
   border-radius: 18px;
-  margin-top: -120px;
   margin-bottom: 30px;
   -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.05);
+}
+
+.name__of__game__block.game-img {
+  margin-top: -120px;
 }
 
 .name__of__game {
@@ -144,6 +176,10 @@ body {
   font-weight: 700;
 }
 
+.nav-item-two {
+  width: 50%;
+}
+
 .list-users {
   margin-bottom: 20px;
 }
@@ -199,6 +235,12 @@ body {
   padding: 30px 0 0 0;
 }
 
+.accordion-small {
+  border-top: none;
+  margin: 0;
+  padding: 0;
+}
+
 .accordion-body {
   padding: 20px 0;
 }
@@ -219,6 +261,16 @@ body {
   width: 17px;
   height: 17px;
   background-image: url(../assets/img/star.svg);
+}
+
+#accordion-button-info::before {
+  content: "";
+  position: relative;
+  float: left;
+  margin: 0px 10px 0 0;
+  width: 17px;
+  height: 17px;
+  background-image: url(../assets/img/Info-rect.svg);
 }
 
 .accordion-button::after {
@@ -249,9 +301,10 @@ body {
 }
 
 footer {
-  background-color: #000;
+  background: rgba(0, 0, 0, 0.9);
   color: #fff;
   padding: 40px 30px;
+  margin-top: 40px;
 }
 
 footer a {
@@ -327,7 +380,7 @@ footer a:hover {
   position: relative;
   float: left;
   margin: 0px 15px 0 0;
-  width: 17px;
+  width: 32px;
   height: 22px;
   background-image: url(../assets/img/lock.svg);
 }
@@ -344,5 +397,206 @@ footer a:hover {
 .footer__copyright {
   margin-top: 15px;
   font-size: 13px;
+}
+
+.cards-block {
+  padding: 20px 0;
+  width: 10000px;
+  width: 100vw;
+  float: left;
+  overflow-x: auto;
+}
+
+.cards-block::-webkit-scrollbar {
+  width: 0;
+}
+
+.cards-block .wrapper {
+  width: 780px;
+  overflow: scroll;
+  vertical-align: top;
+  top: 0;
+}
+
+.def-card {
+  width: 170px;
+  height: 150px;
+  display: inline-block;
+  cursor: pointer;
+  padding: 25px 30px;
+  color: #fff;
+  border-radius: 15px;
+  margin-left: 10px;
+  background: url(../assets/img/card_bg.png), linear-gradient(225deg, #3b3b3b 0%, #050505 100%);
+  background-size: cover;
+}
+
+.def-card:first-child {
+  margin-left: 30px;
+}
+
+.def-card.active {
+  height: 180px;
+}
+
+.icon-card {
+  height: 30px;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.title-card {
+  padding: 10px 0 5px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 19px;
+}
+
+.description-card {
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 18px;
+}
+
+.method__text p {
+  padding: 15px 0;
+  font-size: 14px;
+  line-height: 20px;
+  color: #464646;
+  margin: 0;
+}
+
+.nav-pills {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background: #ffffff;
+  -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 17px;
+}
+
+#format-bill-tab {
+  margin-top: 25px;
+}
+
+.nav-item {
+  color: #000;
+  width: 25%;
+}
+
+.nav-item.nav-item-five {
+  width: 20%;
+}
+
+.nav-item.nav-item-five .nav-link {
+  padding: 15px 0;
+}
+
+.nav-item .nav-link {
+  padding: 18px 0;
+  width: 100%;
+}
+
+.nav-item .nav-link.active {
+  border-radius: 17px;
+  background-color: #f2f2f2;
+}
+
+.nav-item .percent {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 20px;
+  text-align: center;
+  color: #464646;
+}
+
+.type__money {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 19px;
+  text-align: center;
+  color: #000000;
+}
+
+.format-bill .title {
+  padding-bottom: 15px;
+}
+
+.format-sum__block {
+  padding: 20px 0 40px;
+}
+
+.def-input {
+  background: #f9f9f9;
+  border-radius: 5px;
+  padding: 15px 20px;
+  border: none;
+  font-size: 14px;
+  line-height: 19px;
+  min-width: 60%;
+}
+
+.def-input::-webkit-input-placeholder {
+  color: #7d7d7d;
+}
+
+.def-input:-ms-input-placeholder {
+  color: #7d7d7d;
+}
+
+.def-input::-ms-input-placeholder {
+  color: #7d7d7d;
+}
+
+.def-input::placeholder {
+  color: #7d7d7d;
+}
+
+.def-button {
+  background: #e9cd93;
+  -webkit-box-shadow: 0px 4px 7px rgba(222, 200, 149, 0.696054);
+          box-shadow: 0px 4px 7px rgba(222, 200, 149, 0.696054);
+  border-radius: 10px;
+  color: #000;
+  text-align: center;
+  border: none;
+  font-size: 17px;
+  font-weight: 500;
+  width: 100%;
+  padding: 12px 0;
+  margin-top: 30px;
+}
+
+.purchase-amount-block {
+  padding: 50px 0 0;
+}
+
+.purchase-amount-block .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.calculation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.calculation #result {
+  font-size: 18px;
 }
 /*# sourceMappingURL=main.css.map */
