--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ h2 .right-data .light {
 }
 
 .game__background {
-  background: url(/assets/img/battleship.png), #fff;
+  background: url(/assets/img/battleship.png);
   height: 100vw;
   background-size: cover;
   border-radius: 40px;
