--- a/css/main.scss
+++ b/css/main.scss
@@ -147,7 +147,7 @@ h2 {
 }
 
 .game__background {
-    background: url(/assets/img/battleship.png), #fff;
+    background: url(/assets/img/battleship.png);
     height: 100vw;
     background-size: cover;
     border-radius: 40px;
