--- a/css/main.scss
+++ b/css/main.scss
@@ -221,7 +221,7 @@ h2 {
 }
 
 .nav-item-two {
-    width: 50%;
+    width: 50% !important;
 }
 
 .list-users {
@@ -571,6 +571,13 @@ footer {
     }
 }
 
+.circle-input {
+    border-radius: 17px;
+    text-align: center;
+    padding: 20px 0;
+    width: 50%;
+}
+
 .def-button {
     background: #e9cd93;
     box-shadow: 0px 4px 7px rgba(222, 200, 149, 0.696054);
@@ -601,3 +608,24 @@ footer {
         font-size: 18px;
     }
 }
+
+.custom-bid-block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .text {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19px;
+    }
+}
+
+#pills-tab-val, #pills-tab-type-duel {
+    margin-bottom: 20px;
+}
+
+.custom-bid-block {
+    margin-bottom: 20px;
+}
+
