--- a/css/main.scss
+++ b/css/main.scss
@@ -8,34 +8,77 @@ $gray: #f2f2f2;
 
 body {
     background-color: #000;
-    background-image: url(/assets/img/game_bg.png);
+    background-image: url("../assets/img/game_bg.png");
     background-repeat: no-repeat;
-    font-family: "Fira Sans", "Open Sans", Arial, Helvetica, sans-serif;
+    font-family: "Open Sans", "Fira Sans" Arial, Helvetica, sans-serif;
     font-size: 14px;
 }
 
-h2 {
-    // font-family: "Fira Sans";
-    font-weight: 700;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
+}
+
+h1 {
+    font-family: "Fira Sans";
+    width: 80%;
+    margin: 0;
+    font-weight: 700;
+    font-size: 27px;
+    line-height: 32px;
+    color: #000000;
+}
+
+h3 {
+    font-family: "Fira Sans";
+    line-height: 28px;
+    font-weight: 700;
     font-size: 23px;
     line-height: 28px;
     padding-top: 15px;
 
     & .right-data {
         font-weight: 700;
+        display: flex;
+        align-items: center;
         font-size: 18px;
         float: right;
         & .light {
+            font-family: "Open Sans";
             font-weight: 400;
             font-size: 13px;
             line-height: 18px;
+            margin-left: 6px;
         }
     }
 }
 
+h4 {
+    font-family: "Fira Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 31px;
+    color: #000000;
+}
+
 .f-bold {
     font-weight: 700;
+}
+
+.title-left {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 19px;
+    /* identical to box height */
+
+    color: #000000;
 }
 
 .menu-page {
@@ -135,19 +178,10 @@ h2 {
     padding: 30px 0;
     display: flex;
     justify-content: space-between;
-
-    h1 {
-        // font-family: 'Fira Sans';
-        width: 80%;
-        margin: 0;
-        font-weight: 700;
-        font-size: 27px;
-        line-height: 32px;
-    }
 }
 
 .game__background {
-    background: url(/assets/img/battleship.png);
+    background: url("../assets/img/battleship.png");
     height: 100vw;
     background-size: cover;
     border-radius: 40px;
@@ -157,6 +191,7 @@ h2 {
 }
 
 .name__of__game__block {
+    font-family: "Fira Sans";
     background-color: #fff;
     width: 100%;
     border-radius: 18px;
@@ -196,6 +231,7 @@ h2 {
 .prize-fund {
     text-align: center;
     padding: 20px 0 25px 0;
+    width: 27%;
 }
 
 .tabs-block {
@@ -212,11 +248,10 @@ h2 {
     text-align: center;
     border-radius: 17px;
     background-color: #fff;
+    font-weight: 700;
 
     &.active {
         background-color: $gray;
-        border-radius: 17px;
-        font-weight: 700;
     }
 }
 
@@ -295,7 +330,7 @@ h2 {
         margin: 0px 10px 0 0;
         width: 17px;
         height: 17px;
-        background-image: url(../assets/img/star.svg);
+        background-image: url("../assets/img/star.svg");
     }
 }
 
@@ -307,7 +342,7 @@ h2 {
         margin: 0px 10px 0 0;
         width: 17px;
         height: 17px;
-        background-image: url(../assets/img/Info-rect.svg);
+        background-image: url("../assets/img/Info-rect.svg");
     }
 }
 
@@ -315,14 +350,14 @@ h2 {
     &::after {
         width: 10px;
         height: 10px;
-        background-image: url(../assets/img/plus.svg);
+        background-image: url("../assets/img/plus.svg");
         background-size: cover;
     }
 
     &:not(.collapsed)::after {
         width: 10px;
         height: 10px;
-        background-image: url(../assets/img/minus.svg);
+        background-image: url("../assets/img/minus.svg");
         background-size: cover;
     }
 
@@ -404,7 +439,7 @@ footer {
         margin: 0px 15px 0 0;
         width: 32px;
         height: 22px;
-        background-image: url(../assets/img/lock.svg);
+        background-image: url("../assets/img/lock.svg");
     }
 }
 
@@ -447,7 +482,7 @@ footer {
     color: #fff;
     border-radius: 15px;
     margin-left: 5px;
-    background: url(../assets/img/card_bg.png), linear-gradient(225deg, #3b3b3b 0%, #050505 100%);
+    background: url("../assets/img/card_bg.png"), linear-gradient(225deg, #3b3b3b 0%, #050505 100%);
     background-size: cover;
     box-shadow: 1px 4px 5px rgba(0, 0, 0, 0.228549);
 
@@ -512,12 +547,12 @@ footer {
         width: 20%;
 
         .nav-link {
-            padding: 15px 0;
+            padding: 20px 0;
         }
     }
 
     .nav-link {
-        padding: 18px 0;
+        padding: 20px 0;
         width: 100%;
         &.active {
             border-radius: 17px;
@@ -527,10 +562,15 @@ footer {
 
     .percent {
         font-weight: 400;
-        font-size: 13px;
+        font-size: 14px;
         line-height: 20px;
         text-align: center;
         color: #464646;
+
+        &.bold {
+            font-weight: 700;
+            color: #000;
+        }
     }
 }
 
@@ -559,14 +599,14 @@ footer {
     border: none;
     font-size: 14px;
     line-height: 19px;
-    min-width: 65%;
+    min-width: 225px;
+    max-width: 80%;
 
     &::placeholder {
         color: #7d7d7d;
     }
 
     &:focus {
-        // border: 1px solid $dark-gold;
         outline: $dark-gold auto 1px;
     }
 }
@@ -579,16 +619,17 @@ footer {
 }
 
 .def-button {
+    font-family: "Open Sans";
     background: #e9cd93;
     box-shadow: 0px 4px 7px rgba(222, 200, 149, 0.696054);
     border-radius: 10px;
     color: #000;
+    font-weight: 600;
+    font-size: 17px;
     text-align: center;
     border: none;
-    font-size: 17px;
-    font-weight: 500;
     width: 100%;
-    padding: 12px 0;
+    padding: 20px 0;
     margin-top: 30px;
 }
 
@@ -603,10 +644,15 @@ footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
 
-    & #result {
-        font-size: 18px;
-    }
+#result {
+    font-family: "Fira Sans";
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 31px;
+    text-align: right;
+    letter-spacing: 0.5px;
 }
 
 .custom-bid-block {
@@ -621,11 +667,11 @@ footer {
     }
 }
 
-#pills-tab-val, #pills-tab-type-duel {
+#pills-tab-val,
+#pills-tab-type-duel {
     margin-bottom: 20px;
 }
 
 .custom-bid-block {
     margin-bottom: 20px;
 }
-
