--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
   background-color: #000;
   background-image: url("../assets/img/game_bg.png");
   background-repeat: no-repeat;
-  font-family: "Open Sans", "Fira Sans" Arial, Helvetica, sans-serif;
+  font-family: "Open Sans", "Fira Sans", Arial, Helvetica, sans-serif;
   font-size: 14px;
 }
 
@@ -623,7 +623,7 @@ footer a:hover {
 .nav-item .percent {
   font-weight: 400;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 19px;
   text-align: center;
   color: #464646;
 }
@@ -656,7 +656,7 @@ footer a:hover {
   border: none;
   font-size: 14px;
   line-height: 19px;
-  min-width: 225px;
+  width: 225px;
   max-width: 80%;
 }
 
@@ -685,6 +685,10 @@ footer a:hover {
   text-align: center;
   padding: 20px 0;
   width: 50%;
+  -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
+  background: #FFFFFF;
+  width: 210px;
 }
 
 .def-button {
