--- a/css/main.css
+++ b/css/main.css
@@ -687,7 +687,7 @@ footer a:hover {
   width: 50%;
   -webkit-box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
-  background: #FFFFFF;
+  background: #ffffff;
   width: 210px;
 }
 
@@ -762,5 +762,30 @@ footer a:hover {
 
 .custom-bid-block {
   margin-bottom: 20px;
+}
+
+.balance {
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 0, 0, 0.03);
+}
+
+.balance .ballance-game::after {
+  content: "";
+  position: relative;
+  float: right;
+  background: url("../assets/img/wallet-b.svg");
+  background-size: cover;
+  height: 20px;
+  width: 20px;
+  margin-left: 7px;
 }
 /*# sourceMappingURL=main.css.map */
