--- a/css/main.scss
+++ b/css/main.scss
@@ -617,7 +617,7 @@ footer {
     padding: 20px 0;
     width: 50%;
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
-    background: #FFFFFF;
+    background: #ffffff;
     width: 210px;
 }
 
@@ -677,4 +677,31 @@ footer {
 
 .custom-bid-block {
     margin-bottom: 20px;
+}
+
+.balance {
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.03);
+
+    & .left-side {
+    }
+
+    & .right-side {
+    }
+
+    .ballance-game {
+        &::after {
+            content: "";
+            position: relative;
+            float: right;
+            background: url("../assets/img/wallet-b.svg");
+            background-size: cover;
+            height: 20px;
+            width: 20px;
+            margin-left: 7px;
+        }
+    }
 }
