--- a/css/battleship.css
+++ b/css/battleship.css
@@ -18,7 +18,7 @@ h4 {
   margin-top: 50px;
   background-color: #fff;
   border-radius: 40px 40px 0 0;
-  height: calc(100vh - 40px);
+  min-height: calc(100vh - 40px);
 }
 
 #games-online-view div {
@@ -112,6 +112,7 @@ h4 {
 
 .size-ship .inner {
   margin-right: 2px;
+  cursor: pointer;
 }
 
 .size-ship .inner:last-child {
