--- a/css/battleship.scss
+++ b/css/battleship.scss
@@ -16,7 +16,7 @@ h4 {
     margin-top: 50px;
     background-color: #fff;
     border-radius: 40px 40px 0 0;
-    height: calc(100vh - 40px);
+    min-height: calc(100vh - 40px);
 }
 
 #games-online-view {
@@ -103,6 +103,7 @@ h4 {
 .size-ship {
     .inner {
         margin-right: 2px;
+        cursor: pointer;
 
         &:last-child {
             margin-right: 0;
