--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   margin: 0;
 }
 
@@ -707,6 +708,18 @@ footer a:hover {
   margin-top: 30px;
 }
 
+.gray-button {
+  font-weight: 600;
+  font-size: 17px;
+  background: #f2f2f2;
+  -webkit-box-shadow: 1px 4px 5px rgba(0, 0, 0, 0.228549);
+          box-shadow: 1px 4px 5px rgba(0, 0, 0, 0.228549);
+  border-radius: 10px;
+  padding: 20px 0;
+  width: 100%;
+  border: none;
+}
+
 .purchase-amount-block .title {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -787,5 +800,58 @@ footer a:hover {
   height: 20px;
   width: 20px;
   margin-left: 7px;
+}
+
+.bottom-popup {
+  position: absolute;
+  bottom: 0;
+  padding: 30px;
+  background-color: #fff;
+  border-radius: 40px 40px 0 0;
+  -webkit-filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2));
+          filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2));
+  width: 100vw;
+}
+
+.bottom-popup.win {
+  background: url("../assets/img/confetti.png") #fff;
+  background-position: top;
+  background-repeat: no-repeat;
+}
+
+.bottom-popup .center {
+  display: block;
+  text-align: center;
+  margin-top: 35px;
+}
+
+.bottom-popup h3 {
+  display: inline-block;
+}
+
+.bottom-popup .close {
+  float: right;
+  display: inline-block;
+}
+
+.bottom-popup p {
+  padding: 40px 0 30px;
+}
+
+.winning-amount {
+  font-family: "Fira Sans";
+  font-weight: 700;
+  font-size: 50px;
+  text-align: center;
+  padding-top: 30px;
+}
+
+.winning-amount .user__balance-popup {
+  display: block;
+  margin-top: 2px;
+  font-family: "Open Sans";
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 19px;
 }
 /*# sourceMappingURL=main.css.map */
