--- a/css/battleship.scss
+++ b/css/battleship.scss
@@ -5,6 +5,10 @@
     box-shadow: none;
 } //reset css bootstrap
 
+body {
+    padding-top: 50px;
+}
+
 h3 {
     padding: 0;
 }
@@ -13,10 +17,13 @@ h4 {
     line-height: normal;
 }
 .game-block {
-    margin-top: 50px;
     background-color: #fff;
     border-radius: 40px 40px 0 0;
     min-height: calc(100vh - 40px);
+}
+
+.playing-field {
+    padding-bottom: 20px;
 }
 
 #games-online-view {
@@ -71,8 +78,8 @@ h4 {
     &.o {
         //big table
         margin: 20px auto;
-        width: calc(100vw - 40px);
-        height: calc(100vw - 40px);
+        width: 390px;
+        height: 390px;
     }
 
     &.m {
@@ -118,8 +125,8 @@ h4 {
 }
 
 .cell {
-    width: 33px;
-    height: 33px;
+    width: 37px;
+    height: 37px;
     background: linear-gradient(225deg, #3b3b3b 0%, #050505 100%);
     border-radius: 5px;
     margin-right: 0;
