--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,29 @@
 @import url("../node_modules/normalize.css/normalize.css");
 @import url("../assets/fonts/stylesheet.css");
 @import url("../assets/fonts/FiraSans/firasans.css");
+html {
+  background-color: #fff;
+}
+
 body {
-  background-color: #000;
   background-image: url("../assets/img/game_bg.png");
   background-repeat: no-repeat;
   font-family: "Open Sans", "Fira Sans", Arial, Helvetica, sans-serif;
   font-size: 14px;
+  max-width: 428px;
+  -webkit-box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 30px rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
+}
+
+.router {
+  background-color: #fff;
+  padding: 20px;
+}
+
+.router a {
+  display: block;
+  padding-bottom: 5px;
 }
 
 h1,
@@ -83,7 +100,6 @@ h4 {
 
 .menu-page {
   background: rgba(0, 0, 0, 0.8);
-  height: 100vh;
 }
 
 .menu-mobile {
@@ -203,6 +219,7 @@ h4 {
 .game__background {
   background: url("../assets/img/battleship.png");
   height: 100vw;
+  max-height: 428px;
   background-size: cover;
   border-radius: 40px;
   padding: 30px 30px 0 30px;
@@ -235,6 +252,7 @@ h4 {
   border-radius: 18px 18px 0 0;
   margin: 0;
   font-weight: 700;
+  width: 100%;
 }
 
 .name__of__game__block .info__about__users {
@@ -718,6 +736,7 @@ footer a:hover {
   padding: 20px 0;
   width: 100%;
   border: none;
+  color: #000;
 }
 
 .purchase-amount-block .title {
@@ -810,7 +829,8 @@ footer a:hover {
   border-radius: 40px 40px 0 0;
   -webkit-filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2));
           filter: drop-shadow(0px 0px 8px rgba(0, 0, 0, 0.2));
-  width: 100vw;
+  width: 100%;
+  max-width: 428px;
 }
 
 .bottom-popup.win {
