--- a/css/main.scss
+++ b/css/main.scss
@@ -733,7 +733,7 @@ footer {
 }
 
 .bottom-popup {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     padding: 30px;
     background-color: #fff;
