--- a/css/main.css
+++ b/css/main.css
@@ -822,7 +822,7 @@ footer a:hover {
 }
 
 .bottom-popup {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   padding: 30px;
   background-color: #fff;
