--- a/css/main.scss
+++ b/css/main.scss
@@ -269,6 +269,7 @@ h4 {
     -moz-border-radius: 17px;
     background-color: #fff;
     font-weight: 700;
+    border: none;
 
     &.active {
         background-color: $gray;
