--- a/css/main.scss
+++ b/css/main.scss
@@ -25,9 +25,9 @@ button {
     color: #000;
 }
 
-input {
+input, textarea, select {
     -webkit-appearance: none;
-}
+    }
 
 .router {
     background-color: #fff;
@@ -772,7 +772,7 @@ footer {
 
     & .close {
         float: right;
-        display: inline-block;
+        display: inline;
     }
 
     & p {
@@ -797,9 +797,7 @@ footer {
     }
 }
 
-
 .rival-info {
-
     display: flex;
     align-items: center;
     margin-top: 5px;
@@ -823,6 +821,5 @@ footer {
         & h3 {
             margin-top: 10px;
         }
-    } 
-
+    }
 }
