--- a/css/main.scss
+++ b/css/main.scss
@@ -6,6 +6,12 @@ $gray: #f2f2f2;
 @import url("../assets/fonts/stylesheet.css");
 @import url("../assets/fonts/FiraSans/firasans.css");
 
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+    select:focus, textarea:focus, input:focus {
+            font-size: 16px;
+        }
+    }
+
 html {
     background-color: #fff;
 }
