--- a/css/battleship.scss
+++ b/css/battleship.scss
@@ -77,7 +77,7 @@ h4 {
 
     &.o {
         //big table
-        margin: 20px auto;
+        padding: 20px;
         width: 390px;
         height: 390px;
     }
